--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "9-blog-portal",
+  "name": "blog-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.17.19",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.9.4",
-    "apisauce": "3.0.0",
-    "chart.js": "^4.2.1",
-    "moment": "^2.29.4",
+    "antd": "^5.13.2",
+    "apisauce": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.21.3"
   }
 }
